example/errors/interpret/mismatched_type.box
set x: int = 5;

set y: str = x;
